--- a/styles.css
+++ b/styles.css
@@ -4,47 +4,41 @@
   box-sizing: border-box;
 }
 body {
-  /*max-width: 100%;
-    height: 100vh;*/
   display: block;
   background-color: #f0f2f5;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
   overflow-y: scroll;
-  /*margin: -28px;*/
+  margin: 0;
+  padding: 0;
   align-items: center;
   overflow-x: hidden;
 }
 .main-section {
   display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  /*margin: 0 auto;*/
-  padding: 50px 0;
-  position: relative;
-  width: 980px;
   align-items: center;
   margin-left: 18%;
-  margin-top: auto;
-
-  height: 100vh;
+  height:720px ;
+  gap:30px;
+  padding-left:10px; 
+  padding-right:10px; 
 }
 .branding {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 580px;
-  height: 266.08px;
+  width: 550px;
   padding: 0px 32px 0px 0px;
+  margin-top: -200px;
 }
 .branding img {
   width: 320.94px;
-  height: 106px;
-  margin-right: 45%;
+  height: 120px;
+  margin-right: 50%;
+  padding:0;
+  margin-bottom: -20px;
 }
 .branding p {
-  width: 500px;
-  height: 84px;
   color: #1c1e21;
   font-size: 28px;
   line-height: 32px;
@@ -54,19 +48,23 @@ body {
   height: 348.83px;
   background-color: #fff;
   margin: 40px 0px 0px;
-  padding: 10px 0px 24px;
+  padding: 20px;
   box-shadow: 0 3px 5px 2px rgb(150, 150, 150, 0.4);
   text-align: center;
   align-self: center;
   border-radius: 6px;
+  
+}
+.bpanel{
+  margin-top: -90px;
 }
 input {
-  padding: 14px 16px;
+  padding: 10px;
   border-radius: 6px;
   border: 1px solid lightgray;
   margin-bottom: 15px;
-  width: 364px;
-  height: 63.6px;
+  width: 100%;
+  height: 50px;
 }
 input::placeholder {
   font-size: larger;
@@ -79,12 +77,10 @@ input:focus {
   color: #ffffff;
   font-size: 20px;
   font-weight: bolder;
-  padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
-  padding: 0 16px;
-  /* line-height: 48px; */
-  width: 90%;
-  height: 48px;
+  /* padding: 0 16px; */
+  width: 100%;
+  height: 50px;
 }
 .Log-in-button:hover {
   cursor: pointer;
@@ -172,41 +168,37 @@ li {
 @media only screen and (max-width: 767px) {
   .main-section {
     flex-direction: column;
-    width: 100%;
-    margin-left: 0;
-    padding: 10px;
-/* width: 100vw; */
-    /* height: 100%; */
     justify-content: center;
-    align-items: center;
-    /* height: auto; */
+    padding-left: 5%;
+    padding-right: 5%;
   }
 
   .branding {
-    width: 100%;
-    align-items: center;
-    text-align: center;
     padding: 0;
-    margin: 0;
+    text-align: center;
+   margin-top: 0;
   }
 
-  .branding img,
+  .branding img{
+    width: 300px;
+    height: 60px;
+    margin-left: 200px;
+  }
   .branding p {
-    /* margin: 0; */
-    margin-left: 25%;
-    width: auto;
+    font-size: 20px;
+     margin-left:20px;
+     margin-top: 10px;
+     align-items: center;
+     /* justify-content: center; */
   }
   .bpanel{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-   margin-left: 20%;
-   
+  margin-top: 0; 
+  /* margin-left: 25%; */
   }
 
   .panel {
-    width: 90%;
-    margin: 0;
+    width: 100%;
+    /* margin: 0; */
     padding: 30px;
   }
   input {
@@ -228,27 +220,40 @@ li {
 @media only screen and (max-width: 1199px) {
   .main-section {
     flex-direction: column;
-    width: 100%;
-    margin-left: 0;
-    padding: 20px;
-    align-items: center;
-    height: auto;
+    justify-content: center;
+    padding-left: 5%;
+    padding-right: 5%;
   }
 
   .branding img{
-   
-    margin-right: 0;
+    width: 300px;
+    height: 60px;
+    margin-top: 70px;
+    margin-left: 50%;
+    
   }
   .branding{
     text-align: center;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
-align-items: center;
+    align-items: center;
 
-width: 100%;
+
+  }
+  .branding p {
+    font-size: 20px;
+     margin-left:20px;
+     margin-top: 30px;
+     align-items: center;
+     /* justify-content: center; */
+     width: 300px;
+  }
+  .bpanel{
+    margin: 0;
+    margin-top: 20px;
   }
   .panel {
-    margin: 10px 0;
+    width: 350px;
   }
 
   footer {
